fix: RecallService @RequiredArgsConstructor 与手动构造函数冲突
- 移除 @RequiredArgsConstructor（与手动构造函数签名冲突）
- 移除多余的 import